Bug 394896 - Files fed to listbox (and all other files in virt://) cannot be deleted
Summary: Files fed to listbox (and all other files in virt://) cannot be deleted
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: search (other bugs)
Version First Reported In: 2.7.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alex Bikadorov
URL:
Keywords: triaged
: 396683 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-05-31 12:59 UTC by Yuri Chornoivan
Modified: 2018-07-20 09:13 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yuri Chornoivan 2018-05-31 12:59:32 UTC
Steps to reporoduce:

1. Press Ctrl+S in some crowded directory.

2. Choose "*"  for "Search for:"

3. Click on "Feed to listbox" and choose some name then click "Ok".

4. Choose some file then press F8 and click "Trash".

Expected results:

The file should be moved to Trash folder.

Actual results:

"Could not delete file ." from KF5 kio library.

Can it be changed to something more informative if it's the current limitation?

Thanks in advance for fixing this bug.
Comment 1 Marcin Gryszkalis 2018-06-02 18:02:34 UTC
confirmed in today's git(after 2.7.0). move and copy work, trash and delete don't.
Comment 2 Alex Bikadorov 2018-06-16 17:14:05 UTC
FYI: https://phabricator.kde.org/D13572
Comment 3 Alex Bikadorov 2018-07-08 19:34:31 UTC
Git commit 336fefc02d4a2cd6eeaec73397e3d95552b3766e by Alexander Bikadorov.
Committed on 08/07/2018 at 19:25.
Pushed by abikadorov into branch 'master'.

Panel: Always delete files by their URL

Virtual files could not be deleted because the argument for the delete
operation was the (real) filenames but the filename of a virtual file is
the path to the real file. This is fixed.

FIXED: [ 394896 ] Files fed to listbox (and all other files in virt://) cannot be deleted

Differential Revision: https://phabricator.kde.org/D13572

M  +1    -7    krusader/FileSystem/filesystem.cpp
M  +1    -3    krusader/FileSystem/filesystem.h
M  +2    -2    krusader/FileSystem/filesystemprovider.cpp
M  +4    -7    krusader/Panel/panelfunc.cpp

https://commits.kde.org/krusader/336fefc02d4a2cd6eeaec73397e3d95552b3766e
Comment 4 Nikita Melnichenko 2018-07-15 07:07:54 UTC
Git commit 28332e7e8af657b122c0f4260c0a7e3c91a4fe13 by Nikita Melnichenko, on behalf of Alexander Bikadorov.
Committed on 15/07/2018 at 07:04.
Pushed by melnichenko into branch '2.7'.

Panel: Always delete files by their URL

Virtual files could not be deleted because the argument for the delete
operation was the (real) filenames but the filename of a virtual file is
the path to the real file. This is fixed.

FIXED: [ 394896 ] Files fed to listbox (and all other files in virt://) cannot be deleted

Differential Revision: https://phabricator.kde.org/D13572

(cherry picked from commit 336fefc02d4a2cd6eeaec73397e3d95552b3766e)

M  +1    -7    krusader/FileSystem/filesystem.cpp
M  +1    -3    krusader/FileSystem/filesystem.h
M  +2    -2    krusader/FileSystem/filesystemprovider.cpp
M  +4    -7    krusader/Panel/panelfunc.cpp

https://commits.kde.org/krusader/28332e7e8af657b122c0f4260c0a7e3c91a4fe13
Comment 5 Toni Asensi Esteve 2018-07-20 09:13:00 UTC
*** Bug 396683 has been marked as a duplicate of this bug. ***